--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.framework.version>4.3.7.RELEASE</spring.framework.version>
+    <spring.framework.version>4.3.8.RELEASE</spring.framework.version>
   </properties>
 
   <dependencies>
@@ -38,6 +38,11 @@
 	    <artifactId>spring-context-support</artifactId>
 	    <version>${spring.framework.version}</version> 
 	</dependency>
+	<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-web</artifactId>
+    <version>${spring.framework.version}</version>
+</dependency>
 	<!-- json -->
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
@@ -79,6 +84,12 @@
 	    <groupId>org.apache.shiro</groupId>
 	    <artifactId>shiro-all</artifactId>
 	    <version>1.4.0-RC2</version>
+	</dependency>
+	<!-- SLF4J&LOGBACK -->
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.0.13</version>
 	</dependency>
   </dependencies>
 </project>
