--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,11 @@
 		<artifactId>logback-classic</artifactId>
 		<version>1.0.13</version>
 	</dependency>
+	<!-- beetl -->
+	<dependency>
+	    <groupId>com.ibeetl</groupId>
+	    <artifactId>beetl</artifactId>
+	    <version>2.7.13</version>
+	</dependency>
   </dependencies>
 </project>
